load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["storage.go"],
    importpath = "github.com/oracle/mysql-operator/pkg/backup/storage",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/mysql/v1alpha1:go_default_library",
        "//pkg/backup/storage/s3:go_default_library",
    ],
)
