load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "cluster_control.go",
        "config_control.go",
        "controller.go",
        "metrics.go",
        "pod_control.go",
        "secret_control.go",
        "service_control.go",
        "statefulset_control.go",
        "utils.go",
    ],
    importpath = "github.com/oracle/mysql-operator/pkg/controllers/cluster",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/api/cluster:go_default_library",
        "//pkg/apis/mysql/v1alpha1:go_default_library",
        "//pkg/constants:go_default_library",
        "//pkg/controllers/util:go_default_library",
        "//pkg/generated/clientset/versioned:go_default_library",
        "//pkg/generated/clientset/versioned/scheme:go_default_library",
        "//pkg/generated/informers/externalversions/mysql/v1alpha1:go_default_library",
        "//pkg/generated/listers/mysql/v1alpha1:go_default_library",
        "//pkg/options/operator:go_default_library",
        "//pkg/resources/secrets:go_default_library",
        "//pkg/resources/services:go_default_library",
        "//pkg/resources/statefulsets:go_default_library",
        "//pkg/util/metrics:go_default_library",
        "//pkg/version:go_default_library",
        "@com_github_coreos_go_semver//semver:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@io_k8s_api//apps/v1beta1:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/labels:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_apimachinery//pkg/util/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
        "@io_k8s_client_go//informers/apps/v1beta1:go_default_library",
        "@io_k8s_client_go//informers/core/v1:go_default_library",
        "@io_k8s_client_go//kubernetes:go_default_library",
        "@io_k8s_client_go//kubernetes/scheme:go_default_library",
        "@io_k8s_client_go//kubernetes/typed/core/v1:go_default_library",
        "@io_k8s_client_go//listers/apps/v1beta1:go_default_library",
        "@io_k8s_client_go//listers/core/v1:go_default_library",
        "@io_k8s_client_go//tools/cache:go_default_library",
        "@io_k8s_client_go//tools/record:go_default_library",
        "@io_k8s_client_go//util/retry:go_default_library",
        "@io_k8s_client_go//util/workqueue:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "controller_test.go",
        "pod_control_test.go",
        "statefulset_control_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/apis/mysql/v1alpha1:go_default_library",
        "//pkg/constants:go_default_library",
        "//pkg/controllers/util:go_default_library",
        "//pkg/generated/clientset/versioned/fake:go_default_library",
        "//pkg/generated/informers/externalversions:go_default_library",
        "//pkg/generated/informers/externalversions/mysql/v1alpha1:go_default_library",
        "//pkg/options/operator:go_default_library",
        "//pkg/resources/secrets:go_default_library",
        "//pkg/resources/statefulsets:go_default_library",
        "//pkg/version:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@io_k8s_api//apps/v1beta1:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/labels:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_client_go//informers:go_default_library",
        "@io_k8s_client_go//informers/apps/v1beta1:go_default_library",
        "@io_k8s_client_go//informers/core/v1:go_default_library",
        "@io_k8s_client_go//kubernetes:go_default_library",
        "@io_k8s_client_go//kubernetes/fake:go_default_library",
        "@io_k8s_client_go//tools/cache:go_default_library",
    ],
)
