load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "agent_controller.go",
        "condition_updater.go",
        "metrics.go",
        "operator_controller.go",
    ],
    importpath = "github.com/oracle/mysql-operator/pkg/controllers/restore",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/api/restore:go_default_library",
        "//pkg/apis/mysql/v1alpha1:go_default_library",
        "//pkg/backup:go_default_library",
        "//pkg/backup/executor:go_default_library",
        "//pkg/controllers/cluster/labeler:go_default_library",
        "//pkg/controllers/util:go_default_library",
        "//pkg/generated/clientset/versioned/typed/mysql/v1alpha1:go_default_library",
        "//pkg/generated/informers/externalversions/mysql/v1alpha1:go_default_library",
        "//pkg/generated/listers/mysql/v1alpha1:go_default_library",
        "//pkg/util/kube:go_default_library",
        "//pkg/util/metrics:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/util/validation/field:go_default_library",
        "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
        "@io_k8s_client_go//informers/core/v1:go_default_library",
        "@io_k8s_client_go//kubernetes:go_default_library",
        "@io_k8s_client_go//kubernetes/scheme:go_default_library",
        "@io_k8s_client_go//kubernetes/typed/core/v1:go_default_library",
        "@io_k8s_client_go//listers/core/v1:go_default_library",
        "@io_k8s_client_go//tools/cache:go_default_library",
        "@io_k8s_client_go//tools/record:go_default_library",
        "@io_k8s_client_go//util/workqueue:go_default_library",
    ],
)
