load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["metrics.go"],
    importpath = "github.com/oracle/mysql-operator/pkg/util/metrics",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cluster/innodb:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
    ],
)
