load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "backup.go",
        "cleanup.go",
        "cluster.go",
        "framework.go",
        "restore.go",
        "test_context.go",
        "util.go",
    ],
    importpath = "github.com/oracle/mysql-operator/test/e2e/framework",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/api/backup:go_default_library",
        "//pkg/api/cluster:go_default_library",
        "//pkg/api/restore:go_default_library",
        "//pkg/apis/mysql/v1alpha1:go_default_library",
        "//pkg/controllers/cluster/labeler:go_default_library",
        "//pkg/generated/clientset/versioned:go_default_library",
        "//pkg/resources/secrets:go_default_library",
        "//pkg/resources/statefulsets:go_default_library",
        "//test/e2e/framework/ginkgowrapper:go_default_library",
        "@com_github_onsi_ginkgo//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@io_k8s_api//apps/v1beta1:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/labels:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_apimachinery//pkg/util/uuid:go_default_library",
        "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
        "@io_k8s_client_go//kubernetes:go_default_library",
        "@io_k8s_client_go//tools/clientcmd:go_default_library",
        "@io_k8s_utils//exec:go_default_library",
    ],
)
