load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "provider.go",
    ],
    importpath = "github.com/oracle/mysql-operator/pkg/backup/executor/mysqldump",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/mysql/v1alpha1:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@io_k8s_utils//exec:go_default_library",
    ],
)
